# JqrCalcProjects

calculator-series-dummy-main/: .clang-format  .gitignore  .gitlab-ci.yml
calculator-series-dummy-main/1_SimpleCalc/: CMakeLists.txt  outline
calculator-series-dummy-main/1_SimpleCalc/include/: hello_world.h
calculator-series-dummy-main/1_SimpleCalc/src/: README.md  hello_world.c
